# face-detection-2d-antispoofing-realsense

./: .gitignore  CMakeLists.txt  README.md
include/: Coordinates.hpp  DepthContext.hpp  DepthInterface.h  DrawerInterface.h  Face.h  FaceAnnotator.h  FaceBox.h  FaceDepth.hpp  FaceDetector.h  InfoArea.h  LivenessDetector.hpp  NoseDepth.hpp  Parser.h  Sensor.h  Size.hpp  infoType.h  markup_68.h  rs_frame_image.h
lib/: Face.cpp  FaceAnnotator.cpp  FaceBox.cpp  FaceDetector.cpp  InfoArea.cpp  Parser.cpp  Sensor.cpp  cv-helpers.hpp  utils.hpp  validate_face.hpp
models/: required_models.txt
src/: main.cpp
